bin_PROGRAMS = coco
coco_SOURCES = PyAttr.cpp PyBool.cpp PyBuiltInConcat.cpp PyBuiltInFPrint.cpp PyBuiltInInput.cpp PyBuiltInIter.cpp PyBuiltInLen.cpp PyBuiltInPrint.cpp PyBuiltInTPrint.cpp PyByteCode.cpp PyCallable.cpp PyCell.cpp PyCode.cpp PyException.cpp PyExceptionType.cpp PyFloat.cpp PyFrame.cpp PyFunList.cpp PyFunListIterator.cpp PyFunction.cpp PyInt.cpp PyList.cpp PyListIterator.cpp PyNone.cpp PyObject.cpp PyParser.cpp PyRange.cpp PyRangeIterator.cpp PyRangeType.cpp PyScanner.cpp PyStr.cpp PyStrIterator.cpp PyToken.cpp PyTuple.cpp PyTupleIterator.cpp PyType.cpp PyUtil.cpp main.cpp
